Don't create new nsCSSScanners all the time.  Just make nsCSSScanner a non-pointer member of nsCSSParser so when we recycle parsers scanners get recycled automatically.  Bug 263959, r+sr=dbaron